--- a/more.html
+++ b/more.html
@@ -182,14 +182,11 @@
             <h3 class="fantasyH3">What this is</h3>
             <p>
               I’m commissioner for an official <strong>NFL.com</strong> fantasy league called <strong>Blitzed and Confused</strong>.
-              This box is the single source of truth for how the league works, what it costs, how payouts work, and how to join.
-            </p>
-            <p>
-              <strong>There are several open spots available for the upcoming season.</strong>
-            </p>
-            <p class="smallNote">
+              This box is the single source of truth for how the league works, what it costs, how payouts work, and how to join. 
               League funds are collected and paid out through LeagueSafe.
             </p>
+            <p>
+              <strong>There are several open spots available for the 2026-27 season.</strong>
           </div>
         </div>
 
