--- a/work.html
+++ b/work.html
@@ -119,42 +119,16 @@
       </ul>
     </section>
 
-    <section class="panel">
+    <!-- Documentary Work (HEADER BOX) -->
+    <section class="panel" aria-label="Documentary Work">
       <h2 class="h2">Documentary Work</h2>
-
-      <p>
-        <b>The Last to Know (2022)</b><br />
-        Join 89-year-old retired educator and community activist,
-        Dr. Opal Lee (oft referred to as the “Grandmother of Juneteenth”), as she
-        begins a years-long campaign to make her vision of Juneteenth becoming a
-        federally-recognized holiday a reality.
+      <p style="margin:0;">
+        Projects I’ve co-produced, edited, and supported in documentary and long-form storytelling.
       </p>
-
-      <p>
-        My Roles: Co-producer, Co-writer, Editor<br />
-        Released: March 19, 2022<br />
-        Directed by Erica Stevenson
-      </p>
-
-      <ul class="links">
-        <li>🏆 Founder’s Best Story Award — The African Film Festival (TAFF)</li>
-        <li>🏆 Audience Award for Best Documentary — The Black Film Summit</li>
-        <li> Nominee, Best Editing — Oregon Documentary Film Festival</li>
-      </ul>
     </section>
 
-    <section class="panel" aria-label="Documentary video">
-      <div class="videoWrap">
-        <iframe
-          src="https://www.youtube.com/embed/ycHys4e6s3Q"
-          title="Documentary video"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-        ></iframe>
-      </div>
-    </section>
-
-    <section class="panel">
+    <!-- IMDb (moved directly under Documentary Work header) -->
+    <section class="panel" aria-label="IMDb">
       <a
         class="imdbLink"
         href="https://www.imdb.com/name/nm12602714/"
@@ -183,14 +157,56 @@
       </a>
     </section>
 
-    <section class="panel">
-      <h2 class="h2">Academic and Institutional Work</h2>
+    <!-- Documentary Item (add more of these later) -->
+    <section class="panel" aria-label="Documentary item">
+      <p style="margin:0 0 10px;">
+        <b>The Last to Know (2022)</b><br />
+        Join 89-year-old retired educator and community activist,
+        Dr. Opal Lee (oft referred to as the “Grandmother of Juneteenth”), as she
+        begins a years-long campaign to make her vision of Juneteenth becoming a
+        federally-recognized holiday a reality.
+      </p>
 
+      <p style="margin:0 0 12px;">
+        My Roles: Co-producer, Co-writer, Editor<br />
+        Released: March 19, 2022<br />
+        Directed by Erica Stevenson
+      </p>
+
+      <ul class="links">
+        <li>🏆 Founder’s Best Story Award — The African Film Festival (TAFF)</li>
+        <li>🏆 Audience Award for Best Documentary — The Black Film Summit</li>
+        <li> Nominee, Best Editing — Oregon Documentary Film Festival</li>
+      </ul>
+    </section>
+
+    <!-- Documentary Item: video (kept as its own item box) -->
+    <section class="panel" aria-label="Documentary item video">
+      <div class="videoWrap">
+        <iframe
+          src="https://www.youtube.com/embed/ycHys4e6s3Q"
+          title="Documentary video"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </section>
+
+    <!-- Academic & Institutional Work (HEADER BOX) -->
+    <section class="panel" aria-label="Academic and Institutional Work">
+      <h2 class="h2">Academic and Institutional Work</h2>
+      <p style="margin:0;">
+        Applied sociology, service work, and institutional projects that became public-facing programs.
+      </p>
+    </section>
+
+    <!-- Academic Item (add more of these later) -->
+    <section class="panel" aria-label="Academic item">
       <p>
         During my AmeriCorps VISTA service with the Homeless Coalition of Hillsborough County, I developed and led the Homeless PhotoVoice Project, a community-based applied sociology initiative. I designed the project and approached University of Tampa professor Norma Winston to integrate it into her Applied Sociology course. The project became a core part of the curriculum, engaging students in fieldwork, media coordination, and a public PhotoVoice showcase focused on homelessness in Tampa.
       </p>
 
-      <p>
+      <p style="margin:0;">
         The project was later documented as a case example in
         <a
           href="https://www.bloomsbury.com/us/national-service-and-volunteerism-9780739196946/"
