--- a/work.html
+++ b/work.html
@@ -119,15 +119,10 @@
       </ul>
     </section>
 
-    <!-- Documentary Work (HEADER BOX) -->
     <section class="panel" aria-label="Documentary Work">
       <h2 class="h2">Documentary Work</h2>
-      <p style="margin:0;">
-        Projects I’ve co-produced, edited, and supported in documentary and long-form storytelling.
-      </p>
     </section>
 
-    <!-- IMDb (moved directly under Documentary Work header) -->
     <section class="panel" aria-label="IMDb">
       <a
         class="imdbLink"
@@ -195,14 +190,12 @@
     <!-- Academic & Institutional Work (HEADER BOX) -->
     <section class="panel" aria-label="Academic and Institutional Work">
       <h2 class="h2">Academic and Institutional Work</h2>
-      <p style="margin:0;">
-        Applied sociology, service work, and institutional projects that became public-facing programs.
-      </p>
     </section>
 
     <!-- Academic Item (add more of these later) -->
     <section class="panel" aria-label="Academic item">
       <p>
+        <b>Homeless PhotoVoice Project</b><br />
         During my AmeriCorps VISTA service with the Homeless Coalition of Hillsborough County, I developed and led the Homeless PhotoVoice Project, a community-based applied sociology initiative. I designed the project and approached University of Tampa professor Norma Winston to integrate it into her Applied Sociology course. The project became a core part of the curriculum, engaging students in fieldwork, media coordination, and a public PhotoVoice showcase focused on homelessness in Tampa.
       </p>
 
