--- a/services.html
+++ b/services.html
@@ -8,29 +8,19 @@
   <link rel="stylesheet" href="./styles.css" />
 
   <style>
-    .openRow{
-      display:flex;
-      justify-content:flex-start;
-      align-items:center;
-      gap:10px;
-      margin:6px 0 14px;
-      font-size:12px;
-      font-weight:700;
-      color:#2ecc71;
+    .panel{ overflow:hidden; }
+
+    .panel p{
+      margin:0 0 14px;
+      line-height:1.55;
     }
-    .openDot{
-      width:10px;
-      height:10px;
-      border-radius:999px;
-      background:#2ecc71;
-      box-shadow:0 0 0 0 rgba(46,204,113,0.7);
-      animation:pulse 2s infinite;
+    .panel p:last-child{ margin-bottom:0; }
+
+    .panel ul{
+      margin:0;
+      padding-left:18px;
     }
-    @keyframes pulse{
-      0%{box-shadow:0 0 0 0 rgba(46,204,113,0.7);}
-      70%{box-shadow:0 0 0 10px rgba(46,204,113,0);}
-      100%{box-shadow:0 0 0 0 rgba(46,204,113,0);}
-    }
+    .panel ul li{ margin:8px 0; }
 
     .videoWrap{
       position:relative;
@@ -45,6 +35,86 @@
       height:100%;
       border:0;
     }
+
+    .panelLogo{
+      position:absolute;
+      top:16px;
+      right:16px;
+      height:20px;
+      width:auto;
+      max-width:40%;
+    }
+
+    .panelHasCornerLogo{
+      position:relative;
+      padding-right:64px;
+    }
+
+    .contactForm{
+      display:grid;
+      gap:14px;
+    }
+
+    .contactForm label{
+      display:grid;
+      gap:8px;
+      font-weight:700;
+    }
+
+    .contactForm input,
+    .contactForm select,
+    .contactForm textarea{
+      width:100%;
+      max-width:100%;
+      box-sizing:border-box;
+      display:block;
+      font:inherit;
+      font-size:16px;
+      line-height:1.2;
+      padding:10px 12px;
+      border-radius:8px;
+      border:1px solid rgba(0,0,0,.18);
+      background:#fff;
+      color:#111;
+      appearance:none;
+      -webkit-appearance:none;
+    }
+
+    .contactForm select{
+      background-image:none;
+    }
+
+    .contactForm textarea{
+      resize:vertical;
+      min-height:140px;
+      line-height:1.4;
+    }
+
+    .contactForm button{
+      justify-self:start;
+    }
+
+    .hp{
+      position:absolute;
+      left:-9999px;
+      width:1px;
+      height:1px;
+      overflow:hidden;
+    }
+
+    .formStatus{
+      margin:0;
+      font-weight:700;
+    }
+
+    .formStatus[data-kind="success"]{ color:#0a7a31; }
+    .formStatus[data-kind="error"]{ color:#b00020; }
+    .formStatus[data-kind="info"]{ opacity:.8; }
+
+    @media (max-width: 520px){
+      .panelHasCornerLogo{ padding-right:54px; }
+      .panelLogo{ height:18px; }
+    }
   </style>
 </head>
 
@@ -53,10 +123,9 @@
 
     <header class="header">
       <h1 class="title">Services</h1>
-      <p class="sub">Media production • Political consulting</p>
+      <p class="sub">Media production • Consulting</p>
     </header>
 
-    <!-- Pages -->
     <section class="panel" aria-label="Navigation">
       <h2 class="h2">Pages</h2>
       <ul class="links">
@@ -69,19 +138,9 @@
       </ul>
     </section>
 
-    <!-- 1) Media Production Services -->
-    <section class="panel">
+    <section class="panel" aria-label="Media Production Services">
       <h2 class="h2">Media Production Services</h2>
-
-      <div class="openRow" aria-label="Availability">
-        <span class="openDot" aria-hidden="true"></span>
-        <span>Open to work</span>
-      </div>
-
-      <p>
-        I provide end-to-end media production services for individuals, organizations, campaigns, and institutions.
-      </p>
-
+      <p>I provide end-to-end media production services for individuals, organizations, campaigns, and institutions.</p>
       <ul class="links">
         <li>Documentary filmmaking (development, production, post)</li>
         <li>Video production and editing (short-form, long-form)</li>
@@ -91,7 +150,6 @@
       </ul>
     </section>
 
-    <!-- 2) YouTube placeholder (matching work.html style) -->
     <section class="panel" aria-label="Video placeholder">
       <div class="videoWrap">
         <iframe
@@ -103,32 +161,11 @@
       </div>
     </section>
 
-    <!-- 3) Price sheet placeholder -->
     <section class="panel" aria-label="Price sheet">
       <h2 class="h2">Price Sheet</h2>
       <p><em>Placeholder — coming soon.</em></p>
     </section>
 
-    <!-- Political consulting (must be ABOVE the form) -->
-    <section class="panel" aria-label="Political consulting">
-      <h2 class="h2">Political Consulting (Strategy Session)</h2>
-      <p>
-        This session is for candidates, campaign managers, and organizations seeking practical political strategy and field support.
-      </p>
-      <p><strong>Topics may include:</strong></p>
-      <ul class="links">
-        <li>Win number creation and path-to-victory strategy</li>
-        <li>Field program design (persuasion, GOTV, volunteer structure)</li>
-        <li>Turf cutting, targeting, and resource allocation</li>
-        <li>Volunteer training and campaign operations guidance</li>
-        <li>Messaging and social media strategy (strategic guidance, not content production)</li>
-      </ul>
-      <p>
-        This is a working strategy session focused on clarity, decision-making, and execution. Please come prepared with relevant background (office sought, district, timeline, and goals) so we can use the hour effectively.
-      </p>
-    </section>
-
-    <!-- 4) Form (moved from contact.html) -->
     <section class="panel" aria-label="Inquiry form">
       <h2 class="h2">Inquiry Form</h2>
 
@@ -194,7 +231,6 @@
           <input type="text" name="promo_code" autocomplete="off">
         </label>
 
-        <!-- Honeypot spam filter -->
         <div class="hp" aria-hidden="true">
           <label>
             Leave this field empty
@@ -208,36 +244,50 @@
       </form>
     </section>
 
-    <!-- 5) Schedule -->
-    <section class="panel" aria-label="Schedule" style="position:relative;">
+    <section class="panel" aria-label="Political consulting">
+      <h2 class="h2">Political Consulting (Strategy Session)</h2>
+      <p>
+        This session is for candidates, campaign managers, and organizations seeking practical political strategy and field support.
+      </p>
+      <p><strong>Topics may include:</strong></p>
+      <ul class="links">
+        <li>Win number creation and path-to-victory strategy</li>
+        <li>Field program design (persuasion, GOTV, volunteer structure)</li>
+        <li>Turf cutting, targeting, and resource allocation</li>
+        <li>Volunteer training and campaign operations guidance</li>
+        <li>Messaging and social media strategy (strategic guidance, not content production)</li>
+      </ul>
+      <p>
+        This is a working strategy session focused on clarity, decision-making, and execution. Please come prepared with relevant background (office sought, district, timeline, and goals) so we can use the hour effectively.
+      </p>
+    </section>
+
+    <section class="panel panelHasCornerLogo" aria-label="Schedule">
       <h2 class="h2">Schedule</h2>
 
       <img
         src="./assets/Calendly_logo.png"
         alt="Calendly"
-        style="position:absolute;top:16px;right:16px;height:20px;"
+        class="panelLogo"
       />
 
       <div
         class="calendly-inline-widget"
         data-url="https://calendly.com/me--ujg"
-        style="min-width:320px;height:700px;">
-      </div>
+        style="min-width:320px;height:700px;"
+      ></div>
     </section>
 
-    <!-- 6) Payment -->
-    <section class="panel" aria-label="Payments" style="position:relative;">
+    <section class="panel panelHasCornerLogo" aria-label="Payments">
       <h2 class="h2">Payment</h2>
 
       <img
         src="./assets/Stripe_Logo,_revised_2016.svg.png"
         alt="Stripe"
-        style="position:absolute;top:16px;right:16px;height:20px;"
+        class="panelLogo"
       />
 
-      <p>
-        For invoices, deposits, or project payments, you can securely pay online using card, Apple Pay, or Google Pay.
-      </p>
+      <p>For invoices, deposits, or project payments, you can securely pay online.</p>
       <p>
         <a
           href="https://pay.darrensteptoe.com/b/8x26oJ1DL6vHcraft02Fa00"
@@ -287,7 +337,7 @@
 
       eventTypeSelect.addEventListener("change", () => {
         if (eventTypeSelect.value === "Other") {
-          eventTypeOtherWrap.style.display = "block";
+          eventTypeOtherWrap.style.display = "grid";
           eventTypeOther.setAttribute("required", "required");
         } else {
           eventTypeOtherWrap.style.display = "none";
